Heading and navigation added

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant</title>
   </head>
-  <body></body>
+  <body>
+    <h1>All About Croissants</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="photo.html">Photos</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </body>
 </html>
