--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant Photos</title>
+    <title>Contact</title>
   </head>
   <body>
-    <h1>Croissant Photos</h1>
+    <h1>Contact Us</h1>
     <li><a href="index.html">Home</a></li>
     <li><a href="photo.html">Photos</a></li>
     <li><a href="contact.html">Contact</a></li>
