--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="src/styles.css" />
     <title>Croissant</title>
   </head>
   <body>
@@ -13,5 +14,16 @@
       <li><a href="photo.html">Photos</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+    <div>
+      <p>
+        A croissant is a buttery, flaky, French viennoiserie pastry inspired by
+        the shape of the Austrian kipferl but using the French yeast-leavened
+        laminated dough.Croissants are named for their historical crescent
+        shape, the dough is layered with butter, rolled and folded several times
+        in succession, then rolled into a thin sheet, in a technique called
+        laminating. The process results in a layered, flaky texture, similar to
+        a puff pastry.
+      </p>
+    </div>
   </body>
 </html>
