styling of photo page and added photos

--- a/photo.html
+++ b/photo.html
@@ -9,11 +9,29 @@
     <title>Croissant Photos</title>
   </head>
   <body>
-    <h1>Croissant Photos</h1>
+    <h1>
+      <img src="images/Croissant.F16.2k.png" width="100;" />Croissant Photos
+    </h1>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="photo.html">Photos</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+    <div class="row">
+      <div class="column">
+        <img
+          src="images/concept-of-delicious-food-with-croissant-with-rasp-2022-01-19-00-01-23-utc.jpg"
+          alt="croissant with raspberries"
+          width="500;"
+        />
+      </div>
+      <div class="column">
+        <img
+          src="images/delicious-breakfast-with-fresh-croissants-and-cup-2022-01-19-00-12-10-utc.jpg"
+          alt="croissants and cup of coffee"
+          width="500;"
+        />
+      </div>
+    </div>
   </body>
 </html>
