--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact</title>
   </head>
   <body>
-    <h1>Contact Us</h1>
+    <h1><img src="images/Croissant.F16.2k.png" width="100;" />Contact Us</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="photo.html">Photos</a></li>
