--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Croissant</title>
   </head>
   <body>
-    <h1>All About Croissants</h1>
+    <h1>
+      <img src="images/Croissant.F16.2k.png" width="100;" />All About Croissants
+    </h1>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="photo.html">Photos</a></li>
