finished contact page

--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,8 @@
       <li><a href="photo.html">Photos</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+    <div>
+      <p class="contact">To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" target="_blank">hello@croissant.com</a> for more info.</
+    </div>
   </body>
 </html>
