--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+      name="description"
+      content="Everything you need to know about Croissants"
+    />
+
     <link rel="stylesheet" type="text/css" href="src/styles.css" />
-    <title>Contact</title>
+    <title>Contact - Croissants.com</title>
   </head>
   <body>
-    <h1><img src="images/Croissant.F16.2k.png" width="100;" />Contact Us</h1>
+    <h1><img src="images/Croissant.F16.2k.png" width="100;" alt="three dimensional image of a croissant"
+ />Contact Us</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="photo.html">Photos</a></li>
