--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Everything you need to know about Croissants"
+    />
     <link rel="stylesheet" type="text/css" href="src/styles.css" />
-    <title>Croissant</title>
+    <title>All About Croissants - Croissants.com</title>
   </head>
   <body>
     <h1>
-      <img src="images/Croissant.F16.2k.png" width="100;" />All About Croissants
+      <img
+        src="images/Croissant.F16.2k.png"
+        width="100;"
+        alt="three dimensional image of a croissant"
+      />All About Croissants
     </h1>
     <ul>
       <li><a href="index.html">Home</a></li>
