--- a/photo.html
+++ b/photo.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Everything you need to know about Croissants"
+    />
+
     <link rel="stylesheet" type="text/css" href="src/styles.css" />
 
-    <title>Croissant Photos</title>
+    <title>Croissant Photos - Croissants.com</title>
   </head>
   <body>
     <h1>
-      <img src="images/Croissant.F16.2k.png" width="100;" />Croissant Photos
+      <img
+        src="images/Croissant.F16.2k.png"
+        width="100;"
+        alt="three dimensional image of a croissant"
+      />Croissant Photos
     </h1>
     <ul>
       <li><a href="index.html">Home</a></li>
