--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
     <h1><img src="images/Croissant.F16.2k.png" width="100;" alt="three dimensional image of a croissant"
  />Contact Us</h1>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="photo.html">Photos</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html" title="home">Home</a></li>
+      <li><a href="photo.html" title="photos">Photos</a></li>
+      <li><a href="contact.html" title="contact">Contact</a></li>
     </ul>
     <div>
       <p class="contact">To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" target="_blank">hello@croissant.com</a> for more info.</
