--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       />All About Croissants
     </h1>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="photo.html">Photos</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html" title="home">Home</a></li>
+      <li><a href="photo.html" title="photos">Photos</a></li>
+      <li><a href="contact.html" title="contact">Contact</a></li>
     </ul>
     <div>
       <p>
