--- a/photo.html
+++ b/photo.html
@@ -22,9 +22,9 @@
       />Croissant Photos
     </h1>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="photo.html">Photos</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html" title="home">Home</a></li>
+      <li><a href="photo.html" title="photos">Photos</a></li>
+      <li><a href="contact.html" title="contact">Contact</a></li>
     </ul>
     <div class="row">
       <div class="column">
